--- a/todo.txt
+++ b/todo.txt
@@ -6,4 +6,6 @@ My TO-DO List
     4. Attend class on time 
     5. Visit Library
     6. Apply for IT jobs
+    7. Commit to increase your skills in IT
+    8. Search for short courses in IT
     
